--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,9 +65,9 @@
 
             <div class="footer">
                 <p>
-                    <a href="http://dept.example.edu/">Illustrious Department</a>
+                    <a href="https://www.cse.cuhk.edu.hk/en/">Department of Computer Science and Engineering</a>
                     at the
-                    <a href="http://example.edu/">University of Example</a>
+                    <a href="https://www.cuhk.edu.hk/chinese/index.html">The Chinese University of Hong Kong</a>
                 </p>
             </div>
 
