--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
                 <p>
                     <a href="https://www.cse.cuhk.edu.hk/en/">Department of Computer Science and Engineering</a>
                     at the
-                    <a href="https://www.cuhk.edu.hk/chinese/index.html">The Chinese University of Hong Kong</a>
+                    <a href="https://www.cuhk.edu.hk/english/index.html">The Chinese University of Hong Kong</a>
                 </p>
             </div>
 
